# enformanten

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  app.py  docker-compose.yaml  example-config.cfg  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  master_app-govtech(staging).yml  production_deployment.txt  production_deployment.yml  staging_deployment.yml
ai/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ai/algorithm/: index.html
ai/deployment/: index.html
ai/notebooks/: model-flow.ipynb  model-v2.ipynb  model.py  processor.py
ai/overview/: index.html
ai/reference/dashboard/: index.html
ai/reference/database/: index.html
ai/reference/routes/: index.html
ai/reference/services/: index.html
ai/reference/users/: index.html
ai/tests/: test_helpers.py
ai/tests/integration_tests/: conftest.py  test_endpoints.py
ai/tests/test_api/: conftest.py  test_schemas.py
ai/tilly/: config.py  main.py
ai/tilly/dashboard/: __init__.py  dashboard.html  styles.css
ai/tilly/database/: __init__.py
ai/tilly/database/data/: __init__.py  crud.py  db.py  models.py
ai/tilly/database/users/: __init__.py  crud.py  models.py
ai/tilly/routes/: dashboard.py  heartbeat.py  predict.py  room.py  train.py
ai/tilly/services/: __init__.py
ai/tilly/services/dashboard/: __init__.py
ai/tilly/services/ml/: __init__.py  model.py  model_registry.py  trainer.py
ai/tilly/services/ml/transformations/: __init__.py  postprocessing.py  preprocessing.py
ai/tilly/users/: __init__.py  auth.py  initial_users.py  schemas.py
ai/tilly/utils/: __init__.py  logger.py
analytics/: README.md  index.html  overview.md
analytics/frontend/: Energisladrehanke.pbit  frontend.md
analytics/frontend/frontend/: index.html
analytics/pipelines/: pipelines.md
analytics/pipelines/bookings/: bookings_pipeline.md
analytics/pipelines/driftoptimeringsmodel/: driftoptimering_pipeline.md
analytics/pipelines/energy/: energy_pipeline.md
analytics/pipelines/iot/: iot_pipeline.md
analytics/pipelines/master/: master_pipeline.md
analytics/pipelines/pipelines/: index.html
analytics/storage/: key_vault_template.json  storage.md  storage_account_template.json
analytics/transformations/: transformations.md
docs/: index.md  requirements.txt
docs/ai/: algorithm.md  deployment.md  evaluation.md  overview.md
docs/analytics/: README.md
notebooks/: eda.ipynb  model.ipynb
search/: search_index.json
src/: rules.yaml
tests/: test_helpers.py
tests/integration_tests/: config.py
tests/test_api/: test_schemas.py
tilly/: __main__.py  config.py  flow.py  io_.py  main.py  usage.py
tilly/api/: config.py  main.py
tilly/dashboard/: dashboard.html  styles.css
tilly/pipes/: __init__.py  export.py  heuristics.py  misc.py  model.py  preprocess.py
tilly/routes/: dashboard.py  predict.py  train.py
tilly/services/: schemas.py
(+132 files in other folders)
