[tool.poetry]
name = "tilly"
version = "0.1.0"
description = ""
authors = ["nthomsencph <nicolai.thomsen@nttdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.0.3"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
jupyter = "^1.0.0"
plotly = "^5.15.0"
matplotlib = "^3.7.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
